Added HTML5 Boilerplate. - Applied it to the main layout. - Applied it to 404.html.

--- a/SourceCodes/Boilerplates/Application.Web.UI/Web.config
+++ b/SourceCodes/Boilerplates/Application.Web.UI/Web.config
@@ -24,6 +24,12 @@
 		<add key="PreserveLoginUrl" value="true" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+		<add key="Web.LocalisationPath" value="~/Localisation" />
+		<add key="Web.EmailTemplatePath" value="~/Templates/Emails" />
+		<add key="Web.ErrorTemplatePath" value="~/Templates/Errors" />
+		<add key="Web.LogPath" value="~/Logs" />
+		<add key="Web.TempPath" value="~/Temp" />
 	</appSettings>
 
 	<system.web>
