--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,7 @@ Generated_Code #added for RIA/Silverlight projects
 # Visual Studio version. Backup files are not needed, because we have git ;-)
 _UpgradeReport_Files/
 Backup*/
+Libraries/HTML5 Boilerplate/
 UpgradeLog*.XML
 *.bak
 *.orig
