--- a/SourceCodes/Boilerplates/Application.Web.UI.Tests/Application.Web.UI.Tests.csproj
+++ b/SourceCodes/Boilerplates/Application.Web.UI.Tests/Application.Web.UI.Tests.csproj
@@ -123,6 +123,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HomeControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
