Added AdventureWorks data context to Application.DataAccessFramework as an example.

--- a/SourceCodes/Boilerplates/Application.Web.UI.Tests/App.config
+++ b/SourceCodes/Boilerplates/Application.Web.UI.Tests/App.config
@@ -17,11 +17,15 @@
 		</resources>
 	</localisationResourcesSection>
 
+	<connectionStrings>
+		<add name="ApplicationDataContext"
+			 connectionString="metadata=res://*/ApplicationDataContext.csdl|res://*/ApplicationDataContext.ssdl|res://*/ApplicationDataContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=C:\Users\yooj\Downloads\AdventureWorksLT2012_Database\AdventureWorksLT2012_Data.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+			 providerName="System.Data.EntityClient" />
+	</connectionStrings>
+
 	<appSettings>
 		<add key="ClientSettingsProvider.ServiceUri" value="" />
 	</appSettings>
-
-	<connectionStrings />
 
 	<system.web>
 		<membership defaultProvider="ClientAuthenticationMembershipProvider">
