--- a/SourceCodes/Boilerplates/Application.Web.UI/Web.config
+++ b/SourceCodes/Boilerplates/Application.Web.UI/Web.config
@@ -18,6 +18,12 @@
 		</resources>
 	</localisationResourcesSection>
 
+	<connectionStrings>
+		<add name="ApplicationDataContext"
+			 connectionString="metadata=res://*/ApplicationDataContext.csdl|res://*/ApplicationDataContext.ssdl|res://*/ApplicationDataContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=C:\Users\yooj\Downloads\AdventureWorksLT2012_Database\AdventureWorksLT2012_Data.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+			 providerName="System.Data.EntityClient" />
+	</connectionStrings>
+
 	<appSettings>
 		<add key="webpages:Version" value="2.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
