--- a/SourceCodes/Boilerplates/packages/repositories.config
+++ b/SourceCodes/Boilerplates/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Application.DataAccessFramework\packages.config" />
   <repository path="..\Application.Web.UI.Tests\packages.config" />
   <repository path="..\Application.Web.UI\packages.config" />
 </repositories>
