Added Application.Services project and Application.Services.Utilities project.

--- a/SourceCodes/Boilerplates/packages/repositories.config
+++ b/SourceCodes/Boilerplates/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Application.DataAccessFramework\packages.config" />
   <repository path="..\Application.Repositories\packages.config" />
+  <repository path="..\Application.Services\packages.config" />
   <repository path="..\Application.Web.UI.Tests\packages.config" />
   <repository path="..\Application.Web.UI\packages.config" />
 </repositories>
