--- a/SourceCodes/Boilerplates/Application.Web.UI/Application.Web.UI.csproj
+++ b/SourceCodes/Boilerplates/Application.Web.UI/Application.Web.UI.csproj
@@ -162,6 +162,12 @@
     <Content Include="robots.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\bootstrap.min.js.map">
+      <DependentUpon>bootstrap.js</DependentUpon>
+    </Content>
+    <Content Include="Scripts\es5-shim.min.js.map">
+      <DependentUpon>es5-shim.js</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\es5-shim.js" />
     <Content Include="Scripts\es5-shim.min.js" />
@@ -169,6 +175,9 @@
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\jquery.Placeholders.monkey.patch.js" />
     <Content Include="Scripts\jquery.Placeholders.monkey.patch.min.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js.map">
+      <DependentUpon>jquery-1.10.2.js</DependentUpon>
+    </Content>
     <None Include="Scripts\linq-vsdoc.js" />
     <Content Include="Scripts\linq.d.ts" />
     <Content Include="Scripts\linq.jquery.d.ts" />
@@ -192,7 +201,18 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Scripts\jquery.Placeholders.monkey.patch.min.js.map" />
+    <Content Include="Scripts\jquery.Placeholders.monkey.patch.min.js.map">
+      <DependentUpon>jquery.Placeholders.monkey.patch.js</DependentUpon>
+    </Content>
+    <Content Include="Scripts\linq.min.js.map">
+      <DependentUpon>linq.js</DependentUpon>
+    </Content>
+    <Content Include="Scripts\modernizr-2.6.2.min.js.map">
+      <DependentUpon>modernizr-2.6.2.js</DependentUpon>
+    </Content>
+    <Content Include="Scripts\Placeholders.min.js.map">
+      <DependentUpon>Placeholders.js</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
