Replaced HttpContext with HttpContextBase for testability.

--- a/SourceCodes/Boilerplates/Application.Web.UI.Tests/Application.Web.UI.Tests.csproj
+++ b/SourceCodes/Boilerplates/Application.Web.UI.Tests/Application.Web.UI.Tests.csproj
@@ -127,7 +127,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App.config" />
+    <Content Include="App.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Localisation\Resource.en.xml" />
   </ItemGroup>
   <ItemGroup>
