Added mock for HttpContext.

--- a/SourceCodes/Boilerplates/Application.Web.UI.Tests/App.config
+++ b/SourceCodes/Boilerplates/Application.Web.UI.Tests/App.config
@@ -25,6 +25,14 @@
 
 	<appSettings>
 		<add key="ClientSettingsProvider.ServiceUri" value="" />
+
+		<add key="Mock.Identity.Name" value="test" />
+
+		<add key="Web.LocalisationPath" value="~/Localisation" />
+		<add key="Web.EmailTemplatePath" value="~/Templates/Emails" />
+		<add key="Web.ErrorTemplatePath" value="~/Templates/Errors" />
+		<add key="Web.LogPath" value="~/Logs" />
+		<add key="Web.TempPath" value="~/Temp" />
 	</appSettings>
 
 	<system.web>
