--- a/SourceCodes/Boilerplate.Builder.Console/App.config
+++ b/SourceCodes/Boilerplate.Builder.Console/App.config
@@ -1,6 +1,76 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+	</configSections>
+
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+	</startup>
+
+	<log4net>
+		<appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+			<mapping>
+				<level value="ERROR" />
+				<foreColor value="White" />
+				<backColor value="Red, HighIntensity" />
+			</mapping>
+			<mapping>
+				<level value="WARN" />
+				<foreColor value="White" />
+				<backColor value="Blue, HighIntensity" />
+			</mapping>
+			<mapping>
+				<level value="INFO" />
+				<foreColor value="White" />
+				<backColor value="Purple" />
+			</mapping>
+			<mapping>
+				<level value="DEBUG" />
+				<backColor value="Green" />
+			</mapping>
+			<layout type="log4net.Layout.PatternLayout">
+				<!--<conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />-->
+				<conversionPattern value="%date %-5level %logger [%property{ORQID}] - %message%newline%exception" />
+			</layout>
+		</appender>
+
+		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="Logs\All_Log.txt" />
+			<appendToFile value="false" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="5" />
+			<maximumFileSize value="1GB" />
+			<layout type="log4net.Layout.PatternLayout">
+				<!--<conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />-->
+				<conversionPattern value="%date %-5level %logger [%property{ORQID}] - %message%newline%exception" />
+			</layout>
+		</appender>
+
+		<appender name="WarnRollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="Logs\Warn_Log.txt" />
+			<appendToFile value="false" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="5" />
+			<maximumFileSize value="1GB" />
+			<layout type="log4net.Layout.PatternLayout">
+				<!--<conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />-->
+				<conversionPattern value="%date %-5level %logger [%property{ORQID}] - %message%newline%exception" />
+			</layout>
+		</appender>
+
+		<appender name="WarnAppender" type="log4net.Appender.ForwardingAppender" >
+			<threshold value="WARN"/>
+			<!--<appender-ref ref="ColoredConsoleAppender" />-->
+			<appender-ref ref="WarnRollingLogFileAppender" />
+		</appender>
+
+		<root>
+			<level value="INFO" />
+			<!--<level value="WARN" />-->
+			<appender-ref ref="ColoredConsoleAppender" />
+			<appender-ref ref="WarnAppender" />
+			<appender-ref ref="RollingLogFileAppender" />
+		</root>
+	</log4net>
 </configuration>
