Added configuration key for boilerplate template path.

--- a/SourceCodes/Boilerplate.Builder.Console/App.config
+++ b/SourceCodes/Boilerplate.Builder.Console/App.config
@@ -8,6 +8,10 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
 	</startup>
 
+	<appSettings>
+		<add key="App.BoilerplatePath" value="Boilerplate" />
+	</appSettings>
+
 	<log4net>
 		<appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
 			<mapping>
