--- a/SourceCodes/Boilerplates/Application.Web.UI/Application.Web.UI.csproj
+++ b/SourceCodes/Boilerplates/Application.Web.UI/Application.Web.UI.csproj
@@ -185,6 +185,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map">
       <DependentUpon>jquery-1.10.2.min.js</DependentUpon>
     </Content>
+    <Content Include="Scripts\jquery.cookie.js" />
     <Content Include="Scripts\jquery.Placeholders.monkey.patch.js" />
     <Content Include="Scripts\jquery.Placeholders.monkey.patch.min.js">
       <DependentUpon>jquery.Placeholders.monkey.patch.js</DependentUpon>
