--- a/SourceCodes/Boilerplates/LocalisationResourcesConverter.Console/LocalisationResourcesConverter.Console.csproj
+++ b/SourceCodes/Boilerplates/LocalisationResourcesConverter.Console/LocalisationResourcesConverter.Console.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Resource.en.resx" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>IF NOT EXIST $(ProjectDir)Localisation (
