--- a/SourceCodes/Boilerplates/Application.Web.UI/packages.config
+++ b/SourceCodes/Boilerplates/Application.Web.UI/packages.config
@@ -4,6 +4,7 @@
   <package id="es5-shim" version="2.0.11" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Cookie" version="1.3.1" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="linq.js" version="3.0.4-beta5" targetFramework="net45" />
   <package id="linq.js-jQuery" version="3.0.4-beta5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
@@ -17,6 +18,8 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.8" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
