Updated default boilerplate directory name.

--- a/SourceCodes/Boilerplate.Builder.Console/App.config
+++ b/SourceCodes/Boilerplate.Builder.Console/App.config
@@ -9,7 +9,7 @@
 	</startup>
 
 	<appSettings>
-		<add key="App.BoilerplatePath" value="Boilerplate" />
+		<add key="App.BoilerplatePath" value="Boilerplates" />
 	</appSettings>
 
 	<log4net>
