--- a/SourceCodes/Boilerplate.Builder.Console/App.config
+++ b/SourceCodes/Boilerplate.Builder.Console/App.config
@@ -10,6 +10,8 @@
 
 	<appSettings>
 		<add key="App.BoilerplatePath" value="Boilerplates" />
+		<add key="App.DirectoriesToExclude" value="App_Data,bin,Content,Localisation,Logs,obj,Scripts,Temp,Templates" />
+		<add key="App.FileExtensionsToExclude" value="gif,ico,jpg,ldf,mdf,png,user,xml" />
 	</appSettings>
 
 	<log4net>
