--- a/SourceCodes/packages/repositories.config
+++ b/SourceCodes/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Boilerplate.Builder.Console\packages.config" />
+  <repository path="..\Boilerplate.Builder.Tests\packages.config" />
 </repositories>
