Updated configuration settings.

--- a/SourceCodes/Boilerplate.Builder.Console/App.config
+++ b/SourceCodes/Boilerplate.Builder.Console/App.config
@@ -11,7 +11,7 @@
 	<appSettings>
 		<add key="App.BoilerplatePath" value="Boilerplates" />
 		<add key="App.DirectoriesToExclude" value="App_Data,bin,Content,Localisation,Logs,obj,Scripts,Temp,Templates" />
-		<add key="App.FileExtensionsToExclude" value="gif,ico,jpg,ldf,mdf,png,user,xml" />
+		<add key="App.FileExtensionsToExclude" value="gif,ico,jpg,ldf,mdf,png,user" />
 	</appSettings>
 
 	<log4net>
