Updated build events for console project.

--- a/SourceCodes/Boilerplate.Builder.Console/Boilerplate.Builder.Console.csproj
+++ b/SourceCodes/Boilerplate.Builder.Console/Boilerplate.Builder.Console.csproj
@@ -68,6 +68,17 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if not exist "$(SolutionDir)..\Published\" (
+  mkdir "$(SolutionDir)..\Published\"
+)
+
+xcopy "$(TargetFileName)" "$(SolutionDir)..\Published\" /y
+xcopy "$(TargetFileName).config" "$(SolutionDir)..\Published\" /y
+xcopy "$(TargetDir)*.dll" "$(SolutionDir)..\Published\" /y
+xcopy "$(TargetDir)*.xml" "$(SolutionDir)..\Published\" /y
+</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
